# KlipperLCD

./: .gitattributes  .gitignore  CHANGELOG.md  Containerfile.test  Makefile  README.md  lcd.py  main.py  printer.py  pyproject.toml  requirements.txt  service.env.example  service.template
src/klipperlcd/: __init__.py  app.py  lcd.py  lib_col_pic.py  logging_setup.py  printer.py
tests/: test_app_logic.py  test_lcd_logic.py  test_printer_logic.py
